# fotopacients-agent

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
docs/: release.workflow.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ClipboardToast.tsx  LoginScreen.tsx  PatientSearch.tsx  Settings.tsx  UploadQueue.tsx
src/lib/: api.ts  archive.ts  clipboard-watch.ts  drop.ts  node-picker.ts  store.ts  types.ts  updater.ts  upload.ts
src/modes/: AnalysisMode.tsx  CTMode.tsx  UnifiedMode.tsx
